--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -14,6 +14,8 @@
   "author": "shubham goyal",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
